# PoCo

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
development/: AGENT_WORKFLOW.md  README.md
development/developer-docs/: README.md  architecture.md  backends.md  handoff.md  runtime-and-debugging.md
development/layers/: constraints.md  decisions.md  design.md  implementation.md  needs.md  plan.md  problems.md  purpose.md  state.md  validation.md
development/records/: README.md
development/records/2026-04-06-feishu-first-mvp/: decision.md  design.md  need.md  plan.md  problem.md  validation.md
development/records/2026-04-07-context-ownership/: decision.md  design.md  need.md  plan.md  problem.md  validation.md
development/records/2026-04-07-project-group-model/: decision.md  design.md  need.md  plan.md  problem.md  validation.md
development/templates/: decision.template.md  design.template.md  need.template.md  plan.template.md  problem.template.md  validation.template.md
docs/: CHANGELOG.md  commit-conventions.md  cursor-provider-plan.md  feishu-bot-setup.md  quickstart-zh.md  quickstart.md  quickstart.zh-CN.md  setup-card-design.md  todo.md  tui-architecture.md
poco/: __init__.py  app.py  bridge.py  cli.py  config.py  demo.py  env_inventory.py  main.py  runtime.py
poco/agent/: __init__.py  catalog.py  claude_code.py  coco.py  codex_app_server.py  codex_cli.py  common.py  completion_gate.py  cursor_agent.py  factory.py  runner.py  stub.py  tokens.py
poco/bootstrap/: __init__.py  feishu.py
poco/config/: __init__.py  store.py
poco/interaction/: __init__.py  card_dispatcher.py  card_handlers.py  card_models.py  service.py
poco/platform/: __init__.py
poco/project/: bootstrap.py  controller.py  models.py
poco/providers/: __init__.py  base.py  claude.py  codex.py  cursor.py  models.py
poco/relay/: __init__.py  app.py  cards.py  messenger.py  models.py  runtime.py  stores.py  utils.py
poco/session/: controller.py  models.py
poco/storage/: __init__.py  memory.py  protocols.py  sqlite.py
poco/task/: __init__.py  controller.py  dispatcher.py  models.py  notifier.py  rendering.py
poco/tui/: __init__.py  app.py  resources.py  sections.py  state.py
poco/workspace/: controller.py  models.py
tests/: test_agent_catalog.py  test_agent_runner.py  test_card_dispatcher.py  test_card_gateway.py  test_cards_handlers.py  test_cli.py  test_completion_gate.py  test_config.py  test_debug_api.py  test_demo_api.py  test_demo_cards.py  test_feishu_client.py  test_feishu_gateway.py  test_feishu_longconn.py  test_health.py  test_session_controller.py  test_slack_cards.py  test_slack_client.py  test_slack_endpoints.py  test_slack_gateway.py  test_slack_project_bootstrap.py  test_slack_socket_mode.py  test_slack_verifier.py  test_state_persistence.py  test_task_controller.py  test_task_dispatcher.py  test_task_notifier.py  test_workdir_browser.py
(+263 files in other folders)
