[project]
name = "pocket-coding"
version = "0.2.1"
description = "PoCo: Pocket Coding for Feishu"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "PoCo contributors" },
]
keywords = ["codex", "feishu", "lark", "tui", "bot"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = [
  "lark-oapi==1.5.3",
  "textual>=0.75,<1",
]

[project.scripts]
poco = "poco.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
  "poco",
]

[tool.hatch.build.targets.sdist]
include = [
  "/poco",
  "/README.md",
  "/README.zh-CN.md",
  "/pyproject.toml",
]
