[project]
name = "poco"
version = "0.1.0"
description = "PoCo: pocket coding for server-side AI agents through mobile messaging entrypoints."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "lark-oapi>=1.5,<2.0",
    "uvicorn>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["poco*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
