[project]
name = "poco"
version = "0.4.0"
description = "PoCo: pocket coding for server-side AI agents through mobile messaging entrypoints."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Yihanc" },
]
license-files = ["LICENSE"]
keywords = [
    "ai-agent",
    "automation",
    "developer-tools",
    "feishu",
    "mobile",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "fastapi>=0.115,<1.0",
    "lark-oapi>=1.5,<2.0",
    "uvicorn>=0.32,<1.0",
]

[project.scripts]
poco = "poco.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.2,<2.0",
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["poco*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
